sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:10: error: not found: value cell
    cell = 0;
    ^AlgSelectionSort:17: error: not found: value cell
        cell = j;
        ^AlgSelectionSort:23: error: not found: value cell
    echange(i,cell);
              ^